Daily streak feature for players enabled